TINY-3183 Firefox: Fixed alignment in source code dialog

--- a/src/less/theme/components/form/layout.less
+++ b/src/less/theme/components/form/layout.less
@@ -85,7 +85,6 @@
       flex: 1;
       -ms-flex-preferred-size: auto;
       resize: none;
-      white-space: normal;
     }
 
     .tox-navobj {
